PR corrections + prettier write

--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "repository": "https://github.com/ekonomia-tech/ekonomia-reputation",
   "license": "MIT",
   "scripts": {
-    "deploy:aave": "cd subgraphs/aave-v2 && graph deploy --product hosted-service nmimran99/aave-v2",
+    "build:aave-v2": "./scripts/build.sh aave-v2",
+    "build:compound": "./scripts/build.sh compound",
+    "build:euler": "./scripts/build.sh euler",
+    "build:all": "./scripts/build.sh",
+    "deploy:aave-v2": "./scripts/deploy.sh aave-v2",
+    "deploy:compound": "./scripts/deploy.sh compound",
+    "deploy:euler": "./scripts/deploy.sh euler",
+    "deploy:all": "./scripts/deploy.sh",
     "lint": "yarn eslint .",
     "lint-fix": "eslint . --fix",
     "prettier": "prettier '**/*.ts'",
@@ -12,8 +19,8 @@
   },
   "devDependencies": {
     "@graphprotocol/contracts": "^1.10.5-testnet-nft",
-    "@graphprotocol/graph-cli": "0.28.0",
-    "@graphprotocol/graph-ts": "0.26.0",
+    "@graphprotocol/graph-cli": "0.31.0",
+    "@graphprotocol/graph-ts": "0.27.0",
     "@types/node": "^17.0.19",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
